syntax = "proto3";
option java_package = "proto";

package proto;
import "types.proto";

service Communication {
    rpc dsm(Comm) returns (Empty) {};
    rpc reqBlock(commReq) returns (commRes) {};
}
